# ktrl

./: CMakeLists.txt  README.md  Testing.gamecontroller.amgp  ktrlinputinfo.proto
include/ktrl/: KtrlInput.h  KtrlInputConsole.h  KtrlInputController.h  KtrlUInput.h
src/: KtrlInput.cpp  KtrlInputController.cpp  KtrlUInput.cpp
test/: CMakeLists.txt  tests.cmake  write_to_uinput.cpp
